--- a/react/.env
+++ b/react/.env
@@ -1,2 +1,4 @@
 # for some reason, this is not read in shop-context.tsx
-REACT_APP_PRODUCT_SITE="https://fakestoreapi.com/products"
+# they are defined in shop-context.tsx
+REACT_APP_PRODUCTS_URL = "http://localhost:15001/products";
+REACT_APP_CHECKOUT_URL = "http://localhost:15001/checkout";
