--- a/.editorconfig
+++ b/.editorconfig
@@ -16,10 +16,12 @@ dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = true
 
 # Indentation and spacing
-csharp_indent_block_contents = true
-csharp_indent_braces = false
+csharp_indent_switch_labels = true
 csharp_indent_case_contents = true
-csharp_indent_case_contents_when_block = true
+csharp_indent_case_contents_when_block = false
+
+csharp_indent_braces = false
+csharp_indent_block_contents = true
 csharp_indent_labels = flush_left
 
 # New lines
