refactor: change: AtomicBoolean to AtomicInteger

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,7 @@ dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = true
 
 # Indentation and spacing
-csharp_indent_switch_labels = true
+csharp_indent_switch_labels = false
 csharp_indent_case_contents = true
 csharp_indent_case_contents_when_block = false
 
